# cdebootstrap

./: configure.ac
config/: Makefile.am
debian/: changelog
debian/tests/: bullseye-standard  buster-standard  control
include/: Makefile.am
src/: Makefile.am
